# hopple

./: .env.example  .flake8  .gitignore  README.md  alembic.ini  package-lock.json  pyproject.toml  requirements.txt  setup.cfg  test_api_connection.py  test_project_api.py  test_user_api.py
.github/workflows/: ci.yml  mypy.yml  node-ci.yml  tests.yml
alembic/: env.py
alembic/versions/: 12d124b482dc_add_agent_role_column.py  b4343f31163b_create_initial_tables.py
hopple/: main.py
hopple-backend/: .gitignore  jest.config.js  package-lock.json  package.json  reset-db.js  tsconfig.json
hopple-backend/prisma/: schema.prisma
hopple-backend/src/: index.ts
hopple-backend/src/controllers/: authController.ts  projectController.ts  subtaskController.ts  taskController.ts  userController.ts
hopple-frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
hopple-frontend/app/: globals.css  layout.tsx  metadata.ts  page.tsx
hopple-frontend/frontend/: README.md  global.d.ts  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tsconfig.jest.json
hopple/api/: app.py  main.py
hopple/config/: config.py
hopple/database/: db_config.py
hopple/services/: base_service.py  project_service.py  user_service.py
hopple/utils/: logger.py
scripts/: README.md
scripts/manual_tests/: test_pm_agent.py
tests/: conftest.py  generate_coverage.py  run_tests.py
tests/agents/: test_task_creator_agent.py
tests/integration/: test_project_api.py  test_user_api.py
tests/unit/: test_base_agent.py  test_db.py
(+97 files in other folders)
